--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.27</version> <!-- 根据您下载的驱动程序版本进行更新 -->
+        </dependency>
     </dependencies>
 </project>
